--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.mockito:mockito-core:2.18.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 test {
     useJUnitPlatform()
+}
+// 解决gradle中文编译报错
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
